# sub-image

./: Cargo.toml  README.md
sub-image/: Cargo.toml
sub-image-gui/: Cargo.toml
sub-image-gui/src/: main.rs  sub.rs
sub-image/src/: formats.rs  lib.rs  operator.rs
sub-image/src/formats/: image.rs  sub.rs  subs.rs
sub-image/src/operator/: sub.rs
sub-image/tests/: operator.rs
sub-image/tests/data/json/: info.json5
sub-image/tests/data/sub/: circle.sub
