[package]
name = "sub-image-gui"
description = "Utility GUI tool to deal with images with sub-images inside of them"
license-file = "../LICENSE"
readme = "../README.md"
repository = "https://github.com/OriDevTeam/sub-image"
version = "0.1.0"
edition = "2021"


[dependencies]
eframe = "0.19.0"
egui = "0.19.0"
egui_file = "0.2.0"
sub-image = { path = "../sub-image", version = "0.1.0" }
