[package]
name = "sub-image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
image = "0.24.3"
json5 = "0.4.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

