[package]
name = "sub-image"
description = "Utility library to deal with images with sub-images inside of them"
license-file = "LICENSE"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.64"
image = "0.24.3"
json5 = "0.4.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

